--- a/lab04/contacts3/src/main/webapp/WEB-INF/templates/home.html
+++ b/lab04/contacts3/src/main/webapp/WEB-INF/templates/home.html
@@ -1,4 +1,3 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
   <head>
@@ -6,7 +5,17 @@
   </head>
   <body>
     <div id="content">
-      <h1>Witamy w serwisie contacts3!</h1>
+      <h1>Witamy w serwisie contacts3!!!!</h1>
     </div>
+
+<table>
+	<tr th:each="contact : ${contacts}">
+		<td th:text="${contact.lastName}"></td>
+		<td th:text="${contact.email}"></td>
+		<td th:text="${contact.phone}"></td>
+	</tr>
+</table> 
+
+
   </body>
 </html>
