implemented an example dataSource

--- a/lab05/contacts4/src/main/webapp/WEB-INF/templates/home.html
+++ b/lab05/contacts4/src/main/webapp/WEB-INF/templates/home.html
@@ -15,6 +15,7 @@
 					<th>Last Name</th>
 					<th>Email</th>
 					<th>Telephone</th>
+					<th>Id</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -26,6 +27,7 @@
 					<td th:text="${contact.lastName}"></td>
 					<td th:text="${contact.email}"></td>
 					<td th:text="${contact.phone}"></td>
+					<td th:text="${contact.id}"></td>
 				</tr>
 			</tbody>
 		</table>
