1. contact repository interface: added insert method 2. jdbcContactrepository: added implemented insert method with jdbc.update 3. added contactcontroller.java 4. added contactform.html

--- a/lab05/contacts5/src/main/webapp/WEB-INF/templates/page.html
+++ b/lab05/contacts5/src/main/webapp/WEB-INF/templates/page.html
@@ -8,7 +8,7 @@
 
 	<div>Ciało strony</div>
 
-	<div th:fragment="footer"><br/>ZUT Spring Labs 2018</div>
+	<div th:fragment="footer"><br/>ZUT Spring Labs 2k20</div>
 </body>
 
 </html>
