--- a/lab05/contacts5/src/main/webapp/WEB-INF/templates/home.html
+++ b/lab05/contacts5/src/main/webapp/WEB-INF/templates/home.html
@@ -31,6 +31,9 @@
 				</tr>
 			</tbody>
 		</table>
+		
+		<a th:href="@{/contact/create}">Dodaj kontakt</a>
+		
 	</div>
 	<div id="footer" th:include="page :: footer"></div>
 </body>
