1. added validation annotations for Contact properties 2. extended processContact with errors.HasErrors() check 3. added error td when validation fails to display error message

--- a/lab05/contacts5/src/main/webapp/WEB-INF/templates/contactForm.html
+++ b/lab05/contacts5/src/main/webapp/WEB-INF/templates/contactForm.html
@@ -12,18 +12,22 @@
 			<tr>
 				<td>Imie</td>
 				<td><input type="text" th:field="*{firstName}"/></td>
+				<td th:errors="*{firstName}"></td>
 			</tr>
 			<tr>
 				<td>Nazwisko</td>
 				<td><input type="text" th:field="*{lastName}"/></td>
+				<td th:errors="*{lastName}"></td>
 			</tr>
 			<tr>
 				<td>Email</td>
 				<td><input type="email" th:field="*{email}"/></td>
+				<td th:errors="*{email}"></td>
 			</tr>
 			<tr>
 				<td>Telefon</td>
 				<td><input type="text" th:field="*{phone}"/></td>
+				<td th:errors="*{phone}"></td>
 			</tr>
 			<tr>
 				<td><input type="submit" value="Zapisz" /></td>
