--- a/lab06/contacts8/src/main/webapp/WEB-INF/templates/page.html
+++ b/lab06/contacts8/src/main/webapp/WEB-INF/templates/page.html
@@ -8,7 +8,7 @@
 
 	<div>Ciało strony</div>
 
-	<div th:fragment="footer"><br/>ZUT Spring Labs 2019</div>
+	<div th:fragment="footer"><br/>ZUT Spring Labs 2k20</div>
 </body>
 
 </html>
